<resources>
    <string name="app_name">Голос Онлайн</string>
    <string name="email">Электронная почта</string>
    <string name="login">Логин</string>
    <string name="username">Имя пользователя</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="password">Пароль</string>
    <string name="position">Должность</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="sign_up_btp">Создать аккаунт</string>
    <string name="Tests">Тесты</string>
    <string name="exit">Выйти</string>
    <string name="profile">Профиль</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="change_password">Сменить пароль</string>
    <string name="my_golosovania">Мои голосования</string>
    <string name="text_my_name">Имя пользователя</string>
    <string name="search">Поиск</string>
    <string name="new_password">Новый пароль</string>
    <string name="old_password">Старый пароль</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="vote">Голосовать</string>
    <string name="results">Результаты</string>
    <string name="return_to_votes">Вернуться к голосованиям</string>
    <string name="all_votes">Все голосования</string>
    <string name="create_vote">Создать</string>
    <string name="edit_vote">Редактировать</string>
    <string name="delete_vote">Удалить</string>
    <string name="participated_votes">Голосования, в которых участвовал</string>
    <string name="notifications">Уведомления</string>
    <string name="delete">Удалить</string>
    <string name="vote_title_hint">Название голосования</string>
    <string name="vote_date_hint">Срок: 20.04.2026 18:00</string>
    <string name="choice_one">Вариант 1</string>
    <string name="choice_two">Вариант 2</string>
    <string name="choice_three_optional">Вариант 3 (необязательно)</string>
    <string name="choice_four_optional">Вариант 4 (необязательно)</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="new_passwords_do_not_match">Новые пароли не совпадают</string>
    <string name="password_updated">Пароль обновлен</string>
    <string name="network_error">Ошибка сети: %1$s</string>
    <string name="profile_updated">Профиль обновлен</string>
    <string name="create_vote_validation">Укажите название, срок и минимум два варианта ответа</string>
    <string name="invalid_vote_id">Некорректный идентификатор голосования</string>
    <string name="edit_vote_validation">Укажите название и срок голосования</string>
    <string name="empty_created_votes">Вы еще не создали ни одного голосования</string>
    <string name="empty_participated_votes">Вы еще не участвовали ни в одном голосовании</string>
    <string name="empty_votes">Голосования не найдены</string>
    <string name="empty_token_response">Сервер вернул пустой токен</string>
    <string name="login_successful">Вход выполнен</string>
    <string name="delete_notification_title">Удалить уведомление</string>
    <string name="delete_notification_message">Удалить это уведомление?</string>
    <string name="cancel">Отмена</string>
    <string name="empty_notifications">Уведомлений нет</string>
    <string name="registration_successful">Регистрация завершена</string>
    <string name="select_option">Выберите вариант</string>
    <string name="vote_submitted">Голос учтен</string>
    <string name="vote_submitted_message">&#1042;&#1072;&#1096; &#1075;&#1086;&#1083;&#1086;&#1089; &#1091;&#1095;&#1090;&#1105;&#1085;!</string>
    <string name="total_votes">Всего голосов: %1$d</string>
    <string name="delete_vote_title">Удалить голосование</string>
    <string name="delete_vote_message">Удалить это голосование?</string>
    <string name="vote_deleted">Голосование удалено</string>
    <string name="request_failed">Ошибка запроса: %1$d</string>
    <string name="deadline_prefix">Срок: %1$s</string>
    <string name="closed">Завершено</string>
    <string name="closes_in">Закроется через %1$s</string>
    <string name="days_short">%1$d д.</string>
    <string name="hours_short">%1$d ч.</string>
    <string name="minutes_short">%1$d мин.</string>
    <string name="vote_details_summary">Вариантов: %1$d | До: %2$s</string>
    <string name="result_percent">%1$d%%</string>
    <string name="user_full_name">%1$s %2$s</string>
</resources>
