<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:background="@color/blue_regular"
        android:orientation="horizontal"
        android:paddingHorizontal="20sp">

        <TextView
            style="@style/TextTopBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/burger"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile"
            android:src="@drawable/burger"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_container_tests"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:layout_marginTop="60dp"
            android:contentDescription="@null"
            android:src="@drawable/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lines="1"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/text_my_name"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/blue_regular"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changeProfileDataBtn"
            android:layout_marginTop="30dp"
            android:text="@string/edit_profile"
            style="@style/BaseButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changePasswordBtn"
            android:layout_marginTop="15dp"
            android:text="@string/change_password"
            style="@style/BaseButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeProfileDataBtn"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/my_golosovania"
            android:layout_marginTop="15dp"
            android:text="@string/my_golosovania"
            style="@style/BaseButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changePasswordBtn"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/participatedVotesBtn"
            android:layout_marginTop="15dp"
            android:text="@string/participated_votes"
            style="@style/BaseButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_golosovania"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/notificationsBtn"
            android:layout_marginTop="15dp"
            android:text="@string/notifications"
            style="@style/BaseButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/participatedVotesBtn"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_exit"
            android:layout_marginBottom="30dp"
            android:text="@string/exit"
            style="@style/exitButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
