<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/blue_regular"
        android:paddingHorizontal="20dp">

        <TextView
            style="@style/TextTopBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edit_vote"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/burger"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile"
            android:src="@drawable/burger"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/titleInput"
                style="@style/BaseEditText"
                android:hint="@string/vote_title_hint"
                android:gravity="start|center_vertical"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:paddingHorizontal="16dp" />

            <EditText
                android:id="@+id/dateInput"
                style="@style/BaseEditText"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="start|center_vertical"
                android:hint="@string/vote_date_hint"
                android:importantForAutofill="no"
                android:inputType="datetime"
                android:paddingHorizontal="16dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveVoteButton"
                style="@style/BaseButton"
                android:layout_marginTop="24dp"
                android:text="@string/save_changes" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
