<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/blue_regular"
        android:paddingHorizontal="20dp">

        <TextView
            style="@style/TextTopBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/create_vote"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/burger"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile"
            android:src="@drawable/burger"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="620dp"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/createVoteFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/createVoteSubmitButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.58">

                <EditText
                    android:id="@+id/titleInput"
                    style="@style/BaseEditText"
                    android:gravity="start|center_vertical"
                    android:hint="@string/vote_title_hint"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences"
                    android:paddingHorizontal="16dp" />

                <EditText
                    android:id="@+id/dateInput"
                    style="@style/BaseEditText"
                    android:layout_marginTop="12dp"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="start|center_vertical"
                    android:hint="@string/vote_date_hint"
                    android:importantForAutofill="no"
                    android:inputType="datetime"
                    android:paddingHorizontal="16dp" />

                <EditText
                    android:id="@+id/choiceOneInput"
                    style="@style/BaseEditText"
                    android:layout_marginTop="12dp"
                    android:gravity="start|center_vertical"
                    android:hint="@string/choice_one"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences"
                    android:paddingHorizontal="16dp" />

                <EditText
                    android:id="@+id/choiceTwoInput"
                    style="@style/BaseEditText"
                    android:layout_marginTop="12dp"
                    android:gravity="start|center_vertical"
                    android:hint="@string/choice_two"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences"
                    android:paddingHorizontal="16dp" />

                <EditText
                    android:id="@+id/choiceThreeInput"
                    style="@style/BaseEditText"
                    android:layout_marginTop="12dp"
                    android:gravity="start|center_vertical"
                    android:hint="@string/choice_three_optional"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences"
                    android:paddingHorizontal="16dp" />

                <EditText
                    android:id="@+id/choiceFourInput"
                    style="@style/BaseEditText"
                    android:layout_marginTop="12dp"
                    android:gravity="start|center_vertical"
                    android:hint="@string/choice_four_optional"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences"
                    android:paddingHorizontal="16dp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createVoteSubmitButton"
                style="@style/BaseButton"
                android:layout_marginTop="182dp"
                android:text="@string/create_vote"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createVoteFields" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>
