<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:background="@color/blue_regular"
        android:orientation="horizontal"
        android:paddingHorizontal="20sp">

        <TextView
            style="@style/TextTopBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edit_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/burger"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/burger"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_container_tests"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/edit_user"
            android:layout_marginTop="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/textEditName"
            android:layout_marginTop="100dp"
            android:hint="@string/name"
            android:inputType="text"
            style="@style/BaseEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image1" />

        <EditText
            android:id="@+id/textEditSurname"
            android:layout_marginTop="20dp"
            android:hint="@string/surname"
            android:inputType="text"
            style="@style/BaseEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEditName" />

        <EditText
            android:id="@+id/textEditEmail"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            style="@style/BaseEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEditSurname" />

        <EditText
            android:id="@+id/textEditUsername"
            android:layout_marginTop="20dp"
            android:hint="@string/username"
            android:inputType="text"
            style="@style/BaseEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEditEmail" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveChangeProfile"
            android:layout_marginTop="42dp"
            android:text="@string/save_changes"
            style="@style/BaseButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEditUsername" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
