<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/blue_regular"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/titleText"
            style="@style/TextTopBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/burger"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/burger"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile"
            android:src="@drawable/burger"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/detailsScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/subtitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_regular_hint"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/choicesGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/voteButton"
                style="@style/BaseButton"
                android:layout_marginTop="500dp"
                android:layout_gravity="center"
                android:text="@string/vote" />

            <LinearLayout
                android:id="@+id/manageButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/editVoteButton"
                    style="@style/BaseButton"
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/edit_vote" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/deleteVoteButton"
                    style="@style/BaseButton"
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:text="@string/delete_vote" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/successContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="88dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/successIcon"
                    android:layout_marginTop="100dp"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:contentDescription="@null"
                    android:src="@drawable/gal_1" />

                <TextView
                    android:id="@+id/successMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/vote_submitted_message"
                    android:textColor="@color/blue_acsent"
                    android:textSize="25sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/successReturnButton"
                    style="@style/BaseButton"
                    android:layout_width="281dp"
                    android:layout_marginTop="260dp"
                    android:text="@string/return_to_votes" />
            </LinearLayout>

            <TextView
                android:id="@+id/resultsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/results"
                android:textColor="@color/blue_acsent"
                android:textSize="20sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/resultsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/returnToVotesButton"
                style="@style/BaseButton"
                android:layout_marginTop="500dp"
                android:layout_gravity="center"
                android:text="@string/return_to_votes"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
